2002-08-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__handle_focus_raise_click):
	* fvwm/fvwm.h (struct):
	* fvwm/style.c (check_window_style_change):
	(parse_and_set_window_style):
	* fvwm/session.c (MatchWinToSM):
	* fvwm/window_flags.h:
	eliminated parts of the old focus code

	* fvwm/focus.c (__set_focus_to_fwin):
	(set_focus_to_fwin):
	* fvwm/fvwm.c (InitVariables):
	* fvwm/add_window.c (destroy_window):
	* fvwm/events.c (__handle_focus_raise_click):
	* fvwm/screen.h (ScreenInfo):
	eliminated Scr.Ungrabbed global

	* fvwm/update.c (apply_window_updates):
	(flush_window_updates):
	* fvwm/icons.c (DeIconify):
	(Iconify):
	* fvwm/move_resize.c (CMD_Maximize):
	(__move_window):
	(handle_stick):
	* fvwm/frame.c (frame_free_move_resize_args):
	(__frame_setup_window):
	* fvwm/virtual.c (do_move_window_to_desk):
	(CMD_GotoDeskAndPage):
	(goto_desk):
	(MoveViewport):
	* fvwm/stack.c (LowerWindow):
	* fvwm/events.c (HandleMapNotify):
	(HandleVisibilityNotify):
	(DispatchEvent):
	(HandleFocusIn):
	(__handle_focus_raise_click):
	(HandleEnterNotify):
	(HandleMapRequestKeepRaised):
	* fvwm/add_window.c (setup_key_and_button_grabs):
	(setup_focus_policy):
	(destroy_window):
	* fvwm/focus.c (__try_other_screen_focus):
	(__set_focus_to_fwin):
	(set_focus_to_fwin):
	(focus_grab_buttons_on_pointer_window):
	(focus_grab_buttons_on_layer):
	(focus_grab_buttons_new):
	cleaned up focus grab handling.

	* fvwm/focus.c (focus_grab_buttons_on_pointer_window):
	clean up

2002-08-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_window_structure):
	(AddWindow):
	discarded unused return code

	* fvwm/focus.c (focus_grab_buttons):
	split into two fucntions and fixed a bug with ungrabbing buttons

	* fvwm/focus_policy.c (fpol_query_allow_set_focus):
	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/icons.c (DeIconify):
	(DeIconify):
	* fvwm/events.c (HandleButtonPress):
	(HandleEnterNotify):
	(HandleLeaveNotify):
	(HandleMapNotify):