@@ -1,6 +1,10 @@
 2002-08-09  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (__handle_focus_raise_click):
+	(HandleButtonPress):
+	clean up
+
+	* fvwm/events.c (__handle_focus_raise_click):
 	* fvwm/fvwm.h (struct):
 	* fvwm/style.c (check_window_style_change):
 	(parse_and_set_window_style):
